core/argocd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    app: argocd
    category: core
    function: cd
  annotations:
    scheduler.alpha.kubernetes.io/node-selector: role=default
